# techem-dashboard-backend

./: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile  README.md  demo.db  pyproject.toml  pytest.ini
app/: config.py  db.py  main.py
app/api/: routes_challenges.py  routes_chart.py  routes_chat.py  routes_import.py  routes_navigation.py  routes_report.py  routes_search.py  routes_tips.py
app/schemas/: ai.py  requests.py
app/services/: aggregation_service.py  ai_analysis_service.py  chat_service.py  csv_loader.py  gemini_provider.py  holiday_service.py  local_algorithm_provider.py  report_service.py  vertex_provider.py  weather_service.py
app/utils/: date_utils.py  normalization.py
data/sample_csvs/: frankfurt_kapellstrasse.csv  frankfurt_mainzer_landstrasse.csv  halle_merseburger_strasse.csv  hamburg_goethestrasse.csv  muenchen_sonnenweg.csv
prompts/: chat_system_prompt.txt
tests/: support.py  test_ai_providers.py  test_chart.py  test_chat.py  test_import.py  test_navigation.py  test_report.py  test_weather.py
