[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "pandas>=2.2,<3.0",
    "pydantic>=2.7,<3.0",
    "pytest>=8.0,<9.0",
    "python-dotenv>=1.0,<2.0",
    "uvicorn>=0.32,<1.0",
]
